css/style.css
body{
  padding:0;
  margin:0;
  font-family: 'Helvetica', sans-serif;
  font-size: 16px;
}
h1{font-size: 3rem;color:#FFF;}
h2{font-size: 1.8rem;}
a{
  text-decoration: none;
  color:#000;
  font-weight: bold;
}
a:hover{
  text-decoration: underline;
}
.btn{
  background-color:#000;
  color:#FFF;
  padding:20px 40px;
  text-align: center;
  border-radius: 40px;
  width:210px;
  margin-top:50px;
  transition: .2s;
  box-shadow: 0px 4px 6px 0px rgba(0,0,0,0);
}
.btn:hover{
  background-color: #fff;
  color:#000;
  text-decoration: none;
  box-shadow: 0px 4px 6px 0px rgba(0,0,0,.4);
}

header{
  display:flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color:#DB8041;
  padding:10px 25px;
  font-size: 1rem;
}
.brand{
  width:150px;
}
nav ul{
  list-style: none;
}
.connect{
  font-weight: normal;
  background-color: rgba(255, 255, 255, 0.137);
  box-shadow: 0px 4px 6px 0px rgba(0,0,0,0);
  padding:10px;
  border-radius: 3px;
  transition: .2s;
}
.connect:hover{
  background-color: rgba(255, 255, 255, 0.322);
  text-decoration: none;
  box-shadow: 0px 4px 6px 0px rgba(0,0,0,.1);
}

/* /////////////////////////////////////////////////////////////////////// */

main{
  display:flex;
  flex-direction: column;
  align-items: center;
}
.hero{
  width:100%;
  display:flex;
  flex-direction: row;
  justify-content: center;
  align-items:center;
  padding:50px 0;
  background:url(../img/hero.jpg) no-repeat fixed center;
  background-size: cover;
}
.hero-img img{
  max-height:70vh;
  position:relative;
  -webkit-animation-name: fly;
  -webkit-animation-duration:3s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-name:fly;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}
/* Safari 4.0 - 8.0 */
@-webkit-keyframes fly {
  0%    {top:-10px;}
  50%   {top:10px;}
  100%  {top:-10px;}
}
/* Standard syntax */
@keyframes fly {
  0%    {top:-10px;}
  50%   {top:10px;}
  100%  {top:-10px;}
}
.hero-txt{
  display:flex;
  flex-direction: column;
  max-width:480px;
  padding:0 40px;
}
.hero-txt strong{
  font-size: 1.5rem;
}

/* ////////////////////////////// */

.tuto{
  background-color: #fff;
  padding:50px 0;
  display:flex;
  flex-direction: column;
  justify-content: center;
}
.tuto h2{
  color:#DB8041;
  text-align: center;
}
.steps{
  display:flex;
  flex-wrap: wrap;
  justify-content: center;
}
.part{
  padding:50px;
  width:200px;
  text-align: center;
}
.part em{
  font-style: normal;
  font-size: 1.2rem;
}

/* ////////////////////////////// */

article{
  width:100%;
  background:url(../img/illustration_bg.svg) no-repeat center;
  background-size: cover;
  margin-bottom:100px;
}
.details{
  padding:100px 25px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.details h2{
  color:#FFF;
}
.role{
  display:block;
  max-width: 480px;
}

/* //////////////////////////////////////////////////////////////////////////// */

footer{
  background-color: #000;
  display:flex;
  flex-direction: column;
  justify-content: center;
}
footer ul{
  padding:50px 25px;
  display:flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
}
footer li a{
  color:#DB8041;
  font-weight: normal;
}
footer p{
  color:#FFF;
  text-align: center;
  font-size: .9rem;
}

@media screen and (max-width:600px){
  .hero-img{
    display:none;
  }
  footer ul{
    flex-direction: column;
  }
  footer li{
    margin:10px;
  }
}

